# Uranium

./: CMakeLists.txt
include/Uranium/: Shader.cpp  Shader.h
include/glad/: glad.h
res/shaders/: default.glsl
src/: main.cpp
src/glad/: glad.c
